--- a/frontend/task_management/src/App.css
+++ b/frontend/task_management/src/App.css
@@ -19,6 +19,36 @@ a {
   color: inherit; 
 }
 
+#root {
+  margin: 0;
+  padding: 0;
+}
+
+select {
+  margin: 0.5em;
+  padding: 0.5em;
+}
+
+input[type='text'] {
+  width: 50vw;
+  padding: 0.18em;
+  margin: 0 0.5em;
+}
+
+input[type='submit'] {
+  padding: 0.1em 0.5em;
+}
+
+ul {
+  list-style: none;
+  margin-left: 0.5em;
+  padding-left: 0;
+}
+
+li {
+  margin-bottom: 0.5em;
+}
+
 .logo {
   font-size: 22px;
   color: black;
